fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -633,19 +633,19 @@
   "left a comment on": "left a comment on",
   "resolved a comment on": "resolved a comment on",
   "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
-  "shared": "shared",
+  "shared": "اشتراک گذاشته شده",
   "invited you to": "invited you to",
-  "Choose a date": "Choose a date",
+  "Choose a date": "یک تاریخ را انتخاب کنید",
   "API key created. Please copy the value now as it will not be shown again.": "API key created. Please copy the value now as it will not be shown again.",
-  "Scopes": "Scopes",
+  "Scopes": "محدوده ها",
   "Space-separated scopes restrict the access of this API key to specific parts of the API. Leave blank for full access": "Space-separated scopes restrict the access of this API key to specific parts of the API. Leave blank for full access",
-  "Expiration": "Expiration",
-  "Never expires": "Never expires",
-  "7 days": "7 days",
-  "30 days": "30 days",
-  "60 days": "60 days",
-  "90 days": "90 days",
-  "Custom": "Custom",
+  "Expiration": "انقضا",
+  "Never expires": "هرگز منقضی نمی‌شود",
+  "7 days": "7 روز",
+  "30 days": "30 روز",
+  "60 days": "60 روز",
+  "90 days": "90 روز",
+  "Custom": "سفارشی",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "بایگانی اسناد در حال حاضر خالی است.",
   "Drop documents to import": "اسناد را بکشید تا وارد شوند",
@@ -661,16 +661,16 @@
   "Archived by {{userName}}": "بایگانی شده توسط {{userName}}",
   "Sorry, an error occurred saving the collection": "متاسفانه خطایی در ذخیره‌سازی مجموعه رخ داد",
   "Add a description": "توضیحاتی اضافه کنید",
-  "Overview": "Overview",
+  "Overview": "بررسی کلی",
   "Recently updated": "آخرین به‌روزرسانی",
   "Recently published": "آخرین انتشار",
   "Least recently updated": "اولین به‌روزرسانی",
   "A–Z": "الفبایی",
-  "Signing in": "Signing in",
+  "Signing in": "درحال ورود",
   "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the Outline desktop app has opened",
-  "Error creating comment": "Error creating comment",
-  "Add a comment": "Add a comment",
-  "Add a reply": "Add a reply",
+  "Error creating comment": "خطا در ارسال نظر",
+  "Add a comment": "افزودن نظر",
+  "Add a reply": "افزودن پاسخ",
   "Reply": "پاسخ",
   "Post": "ارسال",
   "Upload image": "آپلود تصویر",
@@ -771,7 +771,7 @@
   "It doesn’t look like you have permission to access this document.": "به نظر می‌رسد که شما اجازه دسترسی به این سند را ندارید.",
   "Please request access from the document owner.": "لطفاً دسترسی را از صاحب سند درخواست کنید.",
   "Not found": "یافت نشد",
-  "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.",
+  "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "صفحه‌ای که به دنبال آن هستید پیدا نشد. ممکن است حذف شده باشد یا لینک نادرست باشد.",
   "We were unable to load the document while offline.": "امکان بارگیری سند در حالت آفلاین وجود نداشت.",
   "Your account has been suspended": "حساب شما معلق شده است",
   "Warning Sign": "علامت هشدار",
@@ -782,26 +782,26 @@
   "Weird, this shouldn’t ever be empty": "عجیب ، این هرگز نباید خالی باشد",
   "You haven’t created any documents yet": "شما هنوز هیچ سندی ایجاد نکرده اید",
   "Documents you’ve recently viewed will be here for easy access": "اسنادی که اخیراً مشاهده کرده اید برای دسترسی آسان در اینجا خواهند بود",
-  "{{ count }} invites sent": "{{ count }} invites sent",
-  "{{ count }} invites sent_plural": "{{ count }} invites sent",
-  "Those email addresses are already invited": "Those email addresses are already invited",
+  "{{ count }} invites sent": "{{ count }} دعوت‌نامه ارسال شد",
+  "{{ count }} invites sent_plural": "{{ count }} دعوت‌نامه ارسال شد",
+  "Those email addresses are already invited": "این نشانی‌های ایمیل قبلاً دعوت شده‌اند",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "متأسفانه شما تنها می‌توانید {{MAX_INVITES}} دعوت‌نامه به صورت همزمان ارسال نمایید",
-  "Invited {{roleName}} will receive access to": "Invited {{roleName}} will receive access to",
-  "{{collectionCount}} collections": "{{collectionCount}} collections",
+  "Invited {{roleName}} will receive access to": "دعوت‌شده {{roleName}} به این موارد دسترسی خواهد داشت :",
+  "{{collectionCount}} collections": "{{collectionCount}} مجموعه",
   "Admin": "مدیر",
   "Can manage all workspace settings": "Can manage all workspace settings",
   "Can create, edit, and delete documents": "Can create, edit, and delete documents",
   "Can view and comment": "Can view and comment",
   "Invite people to join your workspace. They can sign in with {{signinMethods}} or use their email address.": "Invite people to join your workspace. They can sign in with {{signinMethods}} or use their email address.",
-  "Invite members to join your workspace. They will need to sign in with {{signinMethods}}.": "Invite members to join your workspace. They will need to sign in with {{signinMethods}}.",
+  "Invite members to join your workspace. They will need to sign in with {{signinMethods}}.": "از اعضای تیم دعوت کنید تا فضای کار شما بپیوندند. آن‌ها باید با {{signinMethods}} وارد شوند.",
   "As an admin you can also <2>enable email sign-in</2>.": "به عنوان مدیر همچنین می‌توانید <2>ورود به سیستم با ایمیل را فعال نمایید</2>.",
-  "Invite as": "Invite as",
+  "Invite as": "دعوت به عنوان",
   "Email": "ایمیل",
   "Add another": "افزودن یک مورد دیگر",
   "Inviting": "در حال دعوت",
   "Send Invites": "ارسال دعوت‌نامه‌ها",
   "Open command menu": "Open command menu",
-  "Forward": "Forward",
+  "Forward": "فوروارد",
   "Edit current document": "ویرایش سند فعلی",
   "Move current document": "انتقال سند فعلی",
   "Open document history": "باز کردن گذشته‌ی سند",
@@ -809,11 +809,11 @@
   "Jump to home": "پرش به خانه",
   "Focus search input": "انتخاب ورودی جستجو",
   "Open this guide": "باز کردن این راهنما",
-  "Enter": "Enter",
+  "Enter": "ثبت",
   "Publish document and exit": "انتشار سند و خروج",
   "Save document": "ذخیره سند",
   "Cancel editing": "لغو ویرایش",
-  "Collaboration": "Collaboration",
+  "Collaboration": "همکاری",
   "Formatting": "قالب‌بندی",
   "Paragraph": "پاراگراف",
   "Large header": "عنوان بزرگ",
