fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -391,10 +391,10 @@
   "Suggestions for invitation": "Suggestions for invitation",
   "No matches": "موردی یافت نشد",
   "Can view": "می‌توان مشاهده کرد",
-  "Everyone in the collection": "Everyone in the collection",
-  "You have full access": "You have full access",
+  "Everyone in the collection": "تمامی افراد در مجموعه",
+  "You have full access": "شما دسترسی کامل دارید",
   "Created the document": "Created the document",
-  "Other people": "Other people",
+  "Other people": "دیگر افراد",
   "Other workspace members may have access": "Other workspace members may have access",
   "This document may be shared with more workspace members through a parent document or collection you do not have access to": "This document may be shared with more workspace members through a parent document or collection you do not have access to",
   "Access inherited from collection": "Access inherited from collection",
@@ -407,7 +407,7 @@
   "Invited": "دعوت شده",
   "Active <1></1> ago": "فعال در <1></1> پیش",
   "Never signed in": "تاکنون وارد نشده است",
-  "Leave": "Leave",
+  "Leave": "خروج",
   "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future",
@@ -419,20 +419,20 @@
   "Logo": "لوگو",
   "Expand sidebar": "Expand sidebar",
   "Collapse sidebar": "Collapse sidebar",
-  "Archived collections": "Archived collections",
+  "Archived collections": "مجموعه های آرشیو شده",
   "New doc": "سند جدید",
   "Empty": "خالی",
-  "No collections": "No collections",
+  "No collections": "مجموعه ای وجود ندارد",
   "Collapse": "جمع کردن",
   "Expand": "باز کردن",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "نوع سند پشتیبانی نمی‌شود - از Markdown، متن ساده، HTML، یا Word استفاده کنید",
-  "Import files": "Import files",
-  "Go back": "Go back",
+  "Import files": "افزودن فایل",
+  "Go back": "بازگشت به عقب",
   "Go forward": "Go forward",
   "Could not load shared documents": "Could not load shared documents",
-  "Shared with me": "Shared with me",
+  "Shared with me": "به اشتراک گذاشته شده با من",
   "Show more": "اطلاعات بیشتر",
-  "Link options": "Link options",
+  "Link options": "تنظیمات لینک",
   "Could not load starred documents": "Could not load starred documents",
   "Starred": "ستاره‌دار",
   "Up to date": "به روز",
@@ -608,15 +608,15 @@
   "Revoke {{ appName }}": "لغو دسترسی {{ appName }}",
   "Revoking": "در حال لغو",
   "Are you sure you want to revoke access?": "آیا مطمئن هستید که می خواهید دسترسی را لغو کنید؟",
-  "Delete app": "Delete app",
+  "Delete app": "حذف برنامه",
   "Revision options": "گزینه‌های بازنگری‌ها",
   "Share options": "گزینه‌های اشتراک‌گذاری",
   "Headings you add to the document will appear here": "عناوینی که به سند اضافه می‌کنید اینجا نمایش داده می‌شوند",
   "Contents": "محتوا",
   "Table of contents": "فهرست مطالب",
-  "Change name": "Change name",
-  "Change email": "Change email",
-  "Suspend user": "Suspend user",
+  "Change name": "تغییر نام",
+  "Change email": "تغییر ایمیل",
+  "Suspend user": "تعلیق کاربر",
   "An error occurred while sending the invite": "An error occurred while sending the invite",
   "Change role": "تغییر نقش",
   "Resend invite": "ارسال مجدد دعوت‌نامه",
@@ -826,16 +826,16 @@
   "Move block down": "Move block down",
   "Lists": "فهرست‌ها",
   "Toggle task list item": "Toggle task list item",
-  "Tab": "Tab",
+  "Tab": "تب",
   "Indent list item": "توبردن مورد فهرست",
   "Outdent list item": "بیرون آوردن مورد فهرست",
   "Move list item up": "انتقال مورد فهرست به بالا",
   "Move list item down": "پایین آوردن مورد",
-  "Tables": "Tables",
-  "Insert row": "Insert row",
+  "Tables": "جداول",
+  "Insert row": "درج سطر",
   "Next cell": "Next cell",
   "Previous cell": "Previous cell",
-  "Space": "Space",
+  "Space": "فاصله",
   "Numbered list": "فهرست شماره‌دار",
   "Blockquote": "نقل قول",
   "Horizontal divider": "جداکننده افقی",
@@ -844,7 +844,7 @@
   "Inline LaTeX": "Inline LaTeX",
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
-  "Emoji": "Emoji",
+  "Emoji": "ایموجی",
   "Insert block": "Insert block",
   "Sign In": "ورود",
   "Continue with Email": "ادامه با ایمیل",
@@ -852,7 +852,7 @@
   "Back to home": "بازگشت به خانه",
   "The workspace could not be found": "The workspace could not be found",
   "To continue, enter your workspace’s subdomain.": "To continue, enter your workspace’s subdomain.",
-  "subdomain": "subdomain",
+  "subdomain": "زیردامنه",
   "Continue": "ادامه",
   "Sorry, the code you entered is invalid or has expired.": "Sorry, the code you entered is invalid or has expired.",
   "The domain associated with your email address has not been allowed for this workspace.": "The domain associated with your email address has not been allowed for this workspace.",
@@ -876,7 +876,7 @@
   "Create workspace": "Create workspace",
   "Setup your workspace by providing a name and details for admin login. You can change these later.": "Setup your workspace by providing a name and details for admin login. You can change these later.",
   "Workspace name": "Workspace name",
-  "Admin name": "Admin name",
+  "Admin name": "نام ادمین",
   "Admin email": "Admin email",
   "Login": "ورود",
   "Error": "Error",
@@ -891,48 +891,48 @@
   "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.",
   "Back to login": "بازگشت به صفحه ورود",
-  "Get started by choosing a sign-in method for your new workspace below…": "Get started by choosing a sign-in method for your new workspace below…",
+  "Get started by choosing a sign-in method for your new workspace below…": "برای شروع، یک شیوه برای ورود به فضای کار خود از زیر انتخاب کنید…",
   "Login to {{ authProviderName }}": "با {{ authProviderName }} وارد شوید",
   "You signed in with {{ authProviderName }} last time.": "شما آخرین بار با {{ authProviderName }} وارد شدید.",
   "Or": "یا",
   "Already have an account? Go to <1>login</1>.": "حساب کاربری دارید؟ به بخش <1>ورود</1> بروید.",
-  "An error occurred": "An error occurred",
+  "An error occurred": "يک خطا رخ داده است",
   "The OAuth client could not be found, please check the provided client ID": "The OAuth client could not be found, please check the provided client ID",
   "The OAuth client could not be loaded, please check the redirect URI is valid": "The OAuth client could not be loaded, please check the redirect URI is valid",
   "Required OAuth parameters are missing": "Required OAuth parameters are missing",
-  "Authorize": "Authorize",
+  "Authorize": "اجازه دادن",
   "{{ appName }} wants to access {{ teamName }}": "{{ appName }} wants to access {{ teamName }}",
   "By <em>{{ developerName }}</em>": "By <em>{{ developerName }}</em>",
   "{{ appName }} will be able to access your account and perform the following actions": "{{ appName }} will be able to access your account and perform the following actions",
-  "read": "read",
-  "write": "write",
+  "read": "خواندن",
+  "write": "نوشتن",
   "read and write": "read and write",
-  "API keys": "API keys",
-  "attachments": "attachments",
-  "collections": "collections",
-  "comments": "comments",
-  "documents": "documents",
-  "events": "events",
-  "groups": "groups",
-  "integrations": "integrations",
-  "notifications": "notifications",
-  "reactions": "reactions",
-  "pins": "pins",
+  "API keys": "کلید های API",
+  "attachments": "پیوست ها",
+  "collections": "مجموعه‌ها",
+  "comments": "نظرات",
+  "documents": "اسناد",
+  "events": "رویداد ها",
+  "groups": "گروه‌ها",
+  "integrations": "یکپارچه‌سازی‌ها",
+  "notifications": "اعلانات",
+  "reactions": "واکنش ها",
+  "pins": "سنجاق ها",
   "shares": "shares",
-  "users": "users",
-  "teams": "teams",
-  "workspace": "workspace",
+  "users": "کاربرها",
+  "teams": "تیم ها",
+  "workspace": "فضای کار",
   "Read all data": "Read all data",
   "Write all data": "Write all data",
   "Any collection": "هر مجموعه‌ای",
-  "All time": "All time",
+  "All time": "تمام مدت",
   "Past day": "روز گذشته",
   "Past week": "هفته گذشته",
   "Past month": "ماه گذشته",
   "Past year": "سال گذشته",
   "Any time": "هر زمانی",
   "Remove document filter": "Remove document filter",
-  "Any status": "Any status",
+  "Any status": "هر وضعیتی",
   "Remove search": "جستجو را حذف کن",
   "Any author": "هر نگارنده",
   "Search titles only": "Search titles only",
@@ -950,33 +950,33 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
-  "Application icon": "Application icon",
+  "Application icon": "آیکون برنامه",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
-  "Developer name": "Developer name",
+  "Developer name": "نام توسعه دهنده",
   "Developer URL": "Developer URL",
   "Allow users from other workspaces to authorize this app": "Allow users from other workspaces to authorize this app",
-  "Credentials": "Credentials",
-  "OAuth client ID": "OAuth client ID",
+  "Credentials": "مجوزها",
+  "OAuth client ID": "شناسه کلاینت OAuth",
   "The public identifier for this app": "The public identifier for this app",
-  "OAuth client secret": "OAuth client secret",
+  "OAuth client secret": "کلید کلاینت OAuth",
   "Store this value securely, do not expose it publicly": "Store this value securely, do not expose it publicly",
   "Where users are redirected after authorizing this app": "Where users are redirected after authorizing this app",
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
-  "by {{ name }}": "by {{ name }}",
-  "Last used": "Last used",
+  "by {{ name }}": "توسط {{ name }}",
+  "Last used": "آخرین استفاده‌",
   "No expiry": "No expiry",
   "Restricted scope": "Restricted scope",
-  "API key copied to clipboard": "API key copied to clipboard",
-  "Copied": "Copied",
-  "Are you sure you want to revoke the {{ tokenName }} token?": "Are you sure you want to revoke the {{ tokenName }} token?",
+  "API key copied to clipboard": "کلید API در کلیپ‌بورد کپی شد",
+  "Copied": "کپی شد",
+  "Are you sure you want to revoke the {{ tokenName }} token?": "آیا مطئمن هستید که توکن {{ tokenName }} را حذف نمایید؟",
   "Disconnect integration": "Disconnect integration",
-  "Connected": "Connected",
-  "Allowed domains": "Allowed domains",
-  "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.",
-  "Remove domain": "Remove domain",
-  "Add a domain": "Add a domain",
+  "Connected": "متصل شد",
+  "Allowed domains": "دامنه های مجاز",
+  "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "دامنه‌هایی که مجاز به ساخت حساب جدید با SSO هستند. تغییر این گزینه روی حساب‌های موجود تأثیری ندارد.",
+  "Remove domain": "حذف دامنه",
+  "Add a domain": "یک دامنه اضافه کنید",
   "Save changes": "Save changes",
   "Please choose a single file to import": "Please choose a single file to import",
   "Your import is being processed, you can safely leave this page": "وارد کردن شما در حال پردازش است، می توانید با خیال راحت این صفحه را ترک کنید",
