add footer navigation

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -595,6 +595,7 @@
   "Integrations": "Integrations",
   "API key": "API key",
   "Show path to document": "Show path to document",
+  "Show footer navigation": "Show footer navigation",
   "Collection menu": "Collection menu",
   "Comment options": "Comment options",
   "Enable viewer insights": "Enable viewer insights",
