revert document icon

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -602,6 +602,7 @@
   "Security": "Security",
   "Features": "Features",
   "Members": "Members",
+  "Custom Emojis": "Custom Emojis",
   "API Keys": "API Keys",
   "Applications": "Applications",
   "Shared Links": "Shared Links",
