fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -288,7 +288,7 @@
   "Include private collections": "Include private collections",
   "{{count}} more user": "{{count}} więcej użytkownika",
   "{{count}} more user_plural": "{{count}} więcej użytkowników",
-  "Filter options": "Filter options",
+  "Filter options": "Opcje filtrowania",
   "Filter": "Filtr",
   "No results": "Brak wyników",
   "{{authorName}} created <3></3>": "{{authorName}} stworzył <3></3>",
@@ -320,15 +320,15 @@
   "Permission": "Uprawnienia",
   "Change Language": "Zmień język",
   "Dismiss": "Odrzuć",
-  "Unable to download image": "Unable to download image",
+  "Unable to download image": "Nie można pobrać obrazu",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
-  "Zoom in": "Zoom in",
-  "Zoom out": "Zoom out",
+  "Zoom in": "Powiększ",
+  "Zoom out": "Pomniejsz",
   "Close": "Zamknij",
-  "Previous": "Previous",
-  "Next": "Next",
-  "Image failed to load": "Image failed to load",
+  "Previous": "Poprzedni",
+  "Next": "Następny",
+  "Image failed to load": "Nie można wczytać obrazu",
   "You’re offline.": "Jesteś offline.",
   "Sorry, an error occurred.": "Przepraszamy, wystąpił błąd.",
   "Click to retry": "Kliknij, aby spróbować ponownie",
@@ -337,7 +337,7 @@
   "Mark all as read": "Oznacz wszystkie jako przeczytane",
   "You're all caught up": "Jesteś na bieżąco",
   "Icon": "Ikona",
-  "OAuth client icon": "OAuth client icon",
+  "OAuth client icon": "Ikona klienta OAuth",
   "My App": "Moja aplikacja",
   "Tagline": "Opis",
   "A short description": "Krótki opis",
@@ -417,8 +417,8 @@
   "{{ count }} groups added to the document": "{{ count }} grupa dodana do dokumentu",
   "{{ count }} groups added to the document_plural": "{{ count }} grup dodanych do dokumentu",
   "Logo": "Logo",
-  "Expand sidebar": "Expand sidebar",
-  "Collapse sidebar": "Collapse sidebar",
+  "Expand sidebar": "Rozwiń pasek boczny",
+  "Collapse sidebar": "Zwiń pasek boczny",
   "Archived collections": "Zarchiwizowane kolekcje",
   "New doc": "Nowy dok",
   "Empty": "Pusty",
@@ -426,7 +426,7 @@
   "Collapse": "Zwiń",
   "Expand": "Rozwiń",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument nie jest obsługiwany – spróbuj formatu Markdown, zwykłego tekstu, HTML lub Word",
-  "Import files": "Import files",
+  "Import files": "Importuj pliki",
   "Go back": "Wróć",
   "Go forward": "Idź do przodu",
   "Could not load shared documents": "Nie można załadować udostępnionych dokumentów",
@@ -477,9 +477,9 @@
   "Replace": "Zamień",
   "Replace all": "Zamień wszystko",
   "Image width": "Image width",
-  "Width": "Width",
+  "Width": "Szerokość",
   "Image height": "Image height",
-  "Height": "Height",
+  "Height": "Wysokość",
   "Profile picture": "Zdjęcie profilowe",
   "Create a new doc": "Utwórz nowy dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} nie zostanie powiadomiony, ponieważ nie mają dostępu do tego dokumentu",
@@ -489,12 +489,12 @@
   "Embed": "Osadzenie",
   "More options": "More options",
   "Rename": "Zmień nazwę",
-  "Insert after": "Insert after",
-  "Insert before": "Insert before",
-  "Move up": "Move up",
-  "Move down": "Move down",
-  "Move left": "Move left",
-  "Move right": "Move right",
+  "Insert after": "Wstaw po",
+  "Insert before": "Wstaw przed",
+  "Move up": "Przesuń w górę",
+  "Move down": "Przesuń w dół",
+  "Move left": "Przesuń w lewo",
+  "Move right": "Przesuń w prawo",
   "Align center": "Wyrównaj do środka",
   "Align left": "Wyrównanie do lewej",
   "Align right": "Wyrównaj do prawej",
@@ -507,7 +507,7 @@
   "Code": "Kod",
   "Comment": "Komentarz",
   "Create link": "Utwórz link",
-  "Edit image URL": "Edit image URL",
+  "Edit image URL": "Zmień adres obrazu",
   "Sorry, an error occurred creating the link": "Niestety, wystąpił błąd podczas tworzenia łącza",
   "Create a new child doc": "Utwórz nowy dokument podrzędny",
   "Delete table": "Usuń tabelę",
@@ -573,7 +573,7 @@
   "Video": "Wideo",
   "None": "Brak",
   "Delete embed": "Usuń osadzenie",
-  "Upload an image": "Upload an image",
+  "Upload an image": "Prześlij obraz",
   "Could not import file": "Nie można zaimportować pliku",
   "Unsubscribed from document": "Wypisano z dokumentu",
   "Unsubscribed from collection": "Zrezygnowano z subskrypcji kolekcji",
@@ -692,7 +692,7 @@
   "You may have lost access to this document, try reloading": "Być może straciłeś dostęp do tego dokumentu, spróbuj przeładować ponownie",
   "Too many users connected to document": "Zbyt wielu użytkowników podłączonych do dokumentu",
   "Your edits will sync once other users leave the document": "Twoje zmiany będą synchronizowane po opuszczeniu dokumentu przez innych użytkowników",
-  "New version available": "New version available",
+  "New version available": "Dostępna nowa wersja",
   "Please reload the page to update to the latest version": "Please reload the page to update to the latest version",
   "Server connection lost": "Utracono połączenie z serwerem",
   "Edits you make will sync once you’re online": "Wprowadzone przez Ciebie zmiany zostaną zsynchronizowane, gdy będziesz online",
@@ -705,7 +705,7 @@
   "only you": "tylko ty",
   "person": "osoba",
   "people": "osoby",
-  "Document title": "Document title",
+  "Document title": "Tytuł dokumentu",
   "Last updated": "Ostatnia aktualizacja",
   "Type '/' to insert, or start writing…": "Wpisz „/”, aby wstawić, lub zacznij pisać…",
   "Hide contents": "Ukryj zawartość",
@@ -782,7 +782,7 @@
   "Weird, this shouldn’t ever be empty": "Dziwne, to nigdy nie powinno być puste",
   "You haven’t created any documents yet": "Nie utworzyłeś jeszcze żadnych dokumentów",
   "Documents you’ve recently viewed will be here for easy access": "Tutaj będą dostępne dokumenty, które ostatnio przeglądałeś",
-  "{{ count }} invites sent": "{{ count }} invites sent",
+  "{{ count }} invites sent": "Wysłano {{ count }} zaproszeń",
   "{{ count }} invites sent_plural": "{{ count }} invites sent",
   "Those email addresses are already invited": "Te adresy e-mail już zostały zaproszone",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Przepraszamy, można wysłać tylko {{MAX_INVITES}} zaproszeń na raz",
@@ -950,7 +950,7 @@
   "Rotate secret": "Zmień sekret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotacja (zmiana) sekretu klienta spowoduje unieważnienie bieżącego sekretu. Upewnij się, że zaktualizujesz wszystkie aplikacje korzystające z tych danych uwierzytelniających.",
   "Displayed to users when authorizing": "Wyświetlane użytkownikom podczas autoryzacji",
-  "Application icon": "Application icon",
+  "Application icon": "Ikona aplikacji",
   "Developer information shown to users when authorizing": "Informacje o deweloperze wyświetlane użytkownikom podczas autoryzacji",
   "Developer name": "Nazwa dewelopera",
   "Developer URL": "Adres URL dewelopera",
@@ -998,7 +998,7 @@
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "Grupy służą do organizacji Twojego zespołu. Pracują najlepiej, gdy skupiają się wokół funkcji lub zadania, na przykład Obsługa Klienta lub Inżynieria.",
   "You’ll be able to add people to the group next.": "Następnie będziesz mógł dodać ludzi do grupy.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "Możesz edytować nazwę tej grupy w dowolnym momencie, jednak zbyt częste zmiany mogą zdezorientować twoich kolegów z zespołu.",
-  "Disable mentions": "Disable mentions",
+  "Disable mentions": "Wyłącz wzmianki",
   "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "Czy jesteś pewien co do tego? Usunięcie grupy <em>{{groupName}}</em> spowoduje utratę przez jej członków dostępu do kolekcji i dokumentów, z którymi jest powiązana.",
   "Add people to {{groupName}}": "Dodaj osoby do {{groupName}}",
@@ -1016,11 +1016,11 @@
   "Search people": "Szukaj osób",
   "No people matching your search": "Brak osób pasujących do Twojego wyszukiwania",
   "No people left to add": "Brak osób do dodania",
-  "Group admin": "Group admin",
-  "Member": "Member",
+  "Group admin": "Administrator grupy",
+  "Member": "Członek",
   "Admins": "Administratorzy",
   "Date created": "Data utworzenia",
-  "Crop Image": "Crop Image",
+  "Crop Image": "Przytnij obraz",
   "Crop image": "Przytnij obraz",
   "How does this work?": "Jak to działa?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Możesz zaimportować plik zip, który został wcześniej wyeksportowany z opcji JSON w innej instancji. W {{ appName }} otwórz <em>Eksport</em> w pasku bocznym Ustawień i kliknij <em>Eksportuj dane</em>.",
@@ -1060,7 +1060,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Ustawienia te wpływają na to, jak Twoja przestrzeń robocza jest widoczna dla wszystkich w zespole.",
   "Display": "Wyświetlanie",
   "The logo is displayed at the top left of the application.": "Logo jest wyświetlane w lewym górnym rogu aplikacji.",
-  "Workspace logo": "Workspace logo",
+  "Workspace logo": "Logo obszaru roboczego",
   "The workspace name, usually the same as your company name.": "Nazwa przestrzeni roboczej, zazwyczaj taka sama jak nazwa Twojej firmy.",
   "Description": "Opis",
   "A short description of your workspace.": "Krótki opis Twojego obszaru roboczego.",
@@ -1079,7 +1079,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Wybierz subdomenę, aby umożliwić stronę logowania tylko dla Twojego zespołu.",
   "This is the screen that workspace members will first see when they sign in.": "To jest ekran, który członkowie przestrzeni roboczej zobaczą jako pierwszy po zalogowaniu.",
   "Danger": "Uwaga",
-  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
+  "You can delete this entire workspace including collections, documents, and users.": "Możesz usunąć cały ten obszar roboczy, włączając w to kolekcje, dokumenty i użytkowników.",
   "Export data": "Eksportuj dane",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "Pełny eksport może zająć trochę czasu — rozważ wyeksportowanie pojedynczego dokumentu lub kolekcji. Możesz zamknąć tę stronę po rozpoczęciu eksportu — jeśli masz włączone powiadomienia, wyślemy link na adres <em>{{ userEmail }}</em>, gdy eksport zostanie zakończony.",
   "Recent exports": "Najnowsze eksporty",
@@ -1110,7 +1110,7 @@
   "Mentioned": "Wspomniany",
   "Receive a notification when someone mentions you in a document or comment": "Otrzymuj powiadomienie, gdy ktoś wspomni o Tobie w dokumencie lub komentarzu",
   "Group mentions": "Group mentions",
-  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Otrzymaj powiadomienie, gdy ktoś wspomni o grupie, do której należysz w dokumencie lub komentarzu",
   "Receive a notification when a comment thread you were involved in is resolved": "Otrzymaj powiadomienie, gdy wątek komentarza, w który byłeś zaangażowany, został rozwiązany",
   "Reaction added": "Reakcja dodana",
   "Receive a notification when someone reacts to your comment": "Otrzymuj powiadomienie, gdy ktoś zareaguje na twój komentarz",
@@ -1245,8 +1245,8 @@
   "Guests": "Guests",
   "New Attribute": "New Attribute",
   "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.": "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.",
-  "Custom domain": "Custom domain",
-  "AI answers": "AI answers",
+  "Custom domain": "Własna domena",
+  "AI answers": "Odpowiedzi AI",
   "Use AI to directly answer searched questions using content in your workspace.": "Use AI to directly answer searched questions using content in your workspace.",
   "API access": "API access",
   "Allow members to create API keys for programmatic access": "Allow members to create API keys for programmatic access",
